--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="shortcut icon" href="mylogo11-01.png">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -54,8 +56,9 @@
         <div class="wrapper">
             <!-- <img src="man_PNG6531.png" alt=""> -->
             <div class="noselect  bg-primary">
+                <img src="man_PNG6531.png" alt="">
                 
-                <h1 class="font1 text-light text-center text-uppercase myname" style="font-size: 4rem; letter-spacing:2rem;height:100vh;line-height: 100vh;">Than Htut Zaw</h1>
+                <!-- <h1 class="font1 text-light text-center text-uppercase myname" style="font-size: 4rem; letter-spacing:2rem;height:100vh;line-height: 100vh;">Than Htut Zaw</h1> -->
                     
                     <div
                         style="
@@ -63,6 +66,7 @@
                         position: absolute;
                         top: 238px;
                         left: 1100px;" class="svgpointer" data-tilt data-tilt-full-page-listening>
+                        <h1 class="font1 myname text-light text-uppercase">than htut zaw</h1>
 
                         <svg style="filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));"fill="#ffffff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="480px" height="480px">
                             <path d="M 6 0 L 20.359375 13.449219 L 14.492188 13.980469 L 13.429688 14.078125 L 13.871094 15.050781 L 17.429688 22.847656 L 14.804688 24 L 11.410156 16.121094 L 10.984375 15.128906 L 10.195313 15.867188 L 6.027344 19.777344 L 6 0" />
@@ -70,6 +74,9 @@
 
                     </div>
             </div>
+
+
+
             <div class="noselect bg-danger">
                 <h1 class="text-center text-light text-uppercase font1">sunset</h1>
                 <!-- <h1 class="myname text-center text-upper">sunset</h1> -->
@@ -87,7 +94,13 @@
 
 
 
-
+    <script>
+        $(document).ready(function () {
+            //    $('.myname').animate({ opacity: '0.4' }, "slow");
+            // $('.myname').animate({ opacity: '1' }, "slow");
+               $('.myname').animate({ top: '100px' }, "slow");
+            });
+    </script>
     <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
     <script type="text/javascript">
         VanillaTilt.init(document.querySelector(".svgpointer"), {
